# llm-personas

python-personas/: .gitignore  demo_notes.md  pyproject.toml
python-personas/docs/: persona_info.md
python-personas/src/philipwilcox/lib/openai/: messages_wrapper.py  openai_wrapper.py
python-personas/src/philipwilcox/lib/util/: md.py
python-personas/src/philipwilcox/personas/api/: basic_persona.py  delegating_persona.py  persona_message_delegator.py  persona_message_delegator_agent.py  persona_message_delegator_linear.py  persona_messenger.py  response_driven_persona.py
python-personas/src/philipwilcox/personas/api/model/: llm_facing_info.py  persona_exception.py  persona_message.py  persona_model_init_prompt.py  proposed_persona_response.py  response_driven_persona_flat_history.py  response_driven_persona_history.py
python-personas/src/philipwilcox/personas/codegen/: code_requirements_and_rewriter_persona.py  code_summarizer_utils.py  codegen_personas.py  method_summary.py
python-personas/src/philipwilcox/personas/console/: console_persona_mixin.py  console_persona_wrapper.py
python-personas/src/philipwilcox/personas/demo/: code_summarizer_main.py  demo_characters.py  demo_codegen_main.py  demo_codegen_swift.py  demo_discussion_main.py  demo_discussion_with_history.py  rewriter.py  target.py
python-personas/src/philipwilcox/personas/fiction/: character_dialogue_agent_orchestration_persona.py  character_dialogue_basic_persona.py  character_dialogue_linear_orchestration_persona.py  character_dialogue_personas.py
(+3 files in other folders)
